--- a/desafio.012/estilo/style.css
+++ b/desafio.012/estilo/style.css
@@ -1,5 +1,10 @@
 @charset "UTF-8";
 
-body {
-    background-color: rgb(187, 240, 164);
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+html, body {
+    background-color: darkcyan;
 }
