--- a/desafio.012/estilo/style.css
+++ b/desafio.012/estilo/style.css
@@ -49,8 +49,13 @@ section.normal {
 }
 
 section.imagem {
-    background-color: black;
+    background-color: rgb(51, 51, 51);;
     color: white;
+}
+
+section.imagem > p {
+    width: 400px;
+    background-color: rgba(0, 0, 0, 0.268);
 }
 
 footer {
